linked pages with
block body

--- a/app_server/views/novice.jade
+++ b/app_server/views/novice.jade
@@ -1,2 +1,5 @@
-h1 tukaj se bodo nahajale novice o #{glava}
-h2 tukaj bodo dodane stvari o #{tic}
+extends layout.jade
+
+block content
+    h1 tukaj se bodo nahajale novice o #{glava}
+    h2 tukaj bodo dodane stvari o #{tic}
