--- a/app_server/views/uporabnik.jade
+++ b/app_server/views/uporabnik.jade
@@ -1,6 +1,11 @@
-h1 to je stran za novice
-h2 tukaj se bodo nahajale stvari za novice
-p  pa se en paragraf za dobro mero
-h1 title #{title}
-h2 glava #{glava}
-h3 tic #{tic}
+extends layout.jade
+
+block content
+    #uporabnik
+        h1 to je stran za novice
+        h2 tukaj se bodo nahajale stvari za novice
+        p  pa se en paragraf za dobro mero
+        h1 TITLE: #{title}
+        h2 GLAVA: #{glava}
+        h3 TIC: #{tic}
+
