--- a/app_server/views/layout.jade
+++ b/app_server/views/layout.jade
@@ -2,6 +2,28 @@ doctype html
 html
   head
     title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
-  body
-    block content
+    style
+      include stil.css
+
+#header
+  h3 To je nas header
+  lu
+    li
+      a(href='/novice') Novice
+
+    li
+      a(href='/uporabnik') Uporabnik
+
+    li
+      a(href='/tutorial') Tutorial
+
+    li
+      a(href='/Ostalo') Ostalo
+
+    li
+      a(href='/') Index
+
+
+body
+  block content
+
