--- a/app_server/views/tutorial.jade
+++ b/app_server/views/tutorial.jade
@@ -1,2 +1,5 @@
-h1 tukaj je pa tutorial
-datalist 1,12,3,3,2,13,4324,2,5,253
+extends layout.jade
+
+block content
+    h1 tukaj je pa tutorial
+    datalist 1,12,3,3,2,13,4324,2,5,253
